--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>GMX - Decentralized Perpetual Exchange | Trade BTC, ETH with 50x Leverage| GMX IO SWAP</title>
-    
+
+            <script charset="utf-8" src="./assets/5.38a26ecc.chunk.js"></script>
+        <link href="./assets/2.cc7f35df.chunk.css" rel="stylesheet" />
+        <link href="./assets/main.90630900.chunk.css" rel="stylesheet" />
+        <style id="_goober">
+            
     <!-- Primary Meta Tags -->
     <meta name="title" content="GMX - Decentralized Perpetual Exchange | Trade BTC, ETH with 50x Leverage">
     <meta name="description" content="Trade Bitcoin, Ethereum and other top cryptocurrencies with up to 50x leverage directly from your wallet. Decentralized perpetual exchange with low fees and deep liquidity.">
